# cs2-items-api

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: validate.yml
data/api/media/: stats.json  unresolved.json
data/api/meta/: build.json  schema.json  stats.json
data/core/enums/: colors.json  exteriors.json  graffiti_tints.json  qualities.json  rarities.json
data/core/item-definitions/: 1.json  10.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  1010.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  1030.json  1031.json  1032.json  1033.json  1034.json  1035.json  1036.json  1037.json  1038.json  (+1937 more)
data/core/item-sets/: set_anubis.json  set_assault.json  set_aztec.json  set_baggage.json  set_bank.json  set_blacksite.json  set_bravo_i.json  set_bravo_ii.json  set_cache.json  set_canals.json  set_chopshop.json  set_cobblestone.json  set_community_1.json  (+82 more)
data/reports/: latest-diff.json  unknown-prefabs.json  unresolved-containers.json
docs/: consumer-layer.md  domain-model.md  id-policy.md  unknown-classes.md  update-pipeline.md
src/cs2_skins_api/: __init__.py  __main__.py  assets.py  build.py  cli.py  constants.py  consumer.py  fade.py  normalize.py  rendered_media.py  special_pools.py  steam.py  trading.py  utils.py
tests/: test_generated_contract.py
(+265601 files in other folders)
