[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cs2-items-api"
version = "0.1.0"
description = "Data-oriented CS2 items repository builder powered by game files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Open Source" }]
dependencies = [
  "vdf>=3.4",
  "vpk>=1.4.0",
]

[project.scripts]
cs2-items-api = "cs2_skins_api.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
